pagina de contacto

--- a/.github/styles.css
+++ b/.github/styles.css
@@ -16,6 +16,9 @@ body {
     background-color:#2699fb;
     height: 10px;
 }
+.nosotros {
+    color:#2699fb;
+}
 .bandera {
     margin-top:1%;
     width: 120px;
