--- a/views/contacto.html
+++ b/views/contacto.html
@@ -24,6 +24,7 @@
         </section>
     </header>
     <nav class="navbar justify-content-end">
+        <a class="navbar-brand" href="inicio.html"><img src="../imagenes/ispc.png" height="50" class="d-inline-block align-top" alt="logo-ispc"></a>
         <ul class="">
             <li class="navbar-brand nav-link active"><a href="inicio.html">Inicio</a></li>
             <li class="navbar-brand nav-link active"><a href="../index.html">Acceso</a></li>
