--- a/views/inicio.html
+++ b/views/inicio.html
@@ -12,13 +12,19 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#"><img src="#" height="50" class="d-inline-block align-top" alt="logo-ispc"></a>
+            <a class="navbar-brand" href="#"><img src="../imagenes/ispc.png" height="50" class="d-inline-block align-top" alt="logo-ispc"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav mr-auto ml-auto">
-                <a class="nav-link primordial" href="../index.html">Iniciar Sesión</a>
+                <li class="nav-item dropdown"> 
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Usuario</a>
+                  <ul class="dropdown-menu bg-danger" aria-labelledby="navbarDropdown">
+                    <li class="bg-danger"><a class="dropdown-item cerrar" href="../index.html">Cerrar Sesión</a></li>
+                  </ul>
+                </li> 
                 <a class="nav-link primordial" href="./contacto.html">Contacto</a>
               </div>
             </div>
@@ -78,8 +84,11 @@
                 </div>
               </div>
         </div>
+        <div class="text-center mt-3">
+            <img class="rounded" src="../imagenes/aula-virtual.jpg">
+        </div>
     </main>
-    <footer>
+    <footer class="mt-2">
         <div class="row copy">
             <div class="col-lg-12 copyright">
               <p> &copy; 2020 Todos los derechos reservados. Aula Virtual 2021|<a href="https://www.linkedin.com/in/luciano99/"> Cancinos Luciano</a> Pablo Alejandro Bajar | Gustavo Emilio Lima</p>
